Fixed file paths

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 
     <h2>Certifications</h2>
     <ul>
-        <img src="../Capstone Project 1/assets/SQL.png" height="200" width=""> 
+        <img src="./assets/SQL.png" height="200" width=""> 
         <br>
-        <a href="../Capstone Project 1/assets/SQL.png" >SoloLearn SQL certificate</a>
+        <a href="./assets/SQL.png" >SoloLearn SQL certificate</a>
         
     </ul>
 
@@ -120,9 +120,9 @@
 <hr>
 <h2>Other</h2>
 <ul>
-    <li><a href="../Capstone Project 1/public/contact.html">My Contacts
+    <li><a href="./public/contact.html">My Contacts
         <br>
-        <img src="../Capstone Project 1/assets/contact_me.jpg">
+        <img src="./assets/contact_me.jpg">
     </a> </li>
 </ul>
 </body>
