--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Maksym Panchenko</h1>
     <h3>QA Engineer</h2>
 
-<img src="/assets/avatar.jpg" height=" 225" width="225">
+<img src="../assets/avatar.jpg" height=" 225" width="225">
 
     <h2>Summary</h2>
 <p>
@@ -109,7 +109,7 @@
 
     <h2>Certifications</h2>
     <ul>
-        <img src="/assets/SQL.png" height="200" width=""> 
+        <img src="./assets/SQL.png" height="200" width=""> 
         <br>
         <a href="/assets/SQL.png" >SoloLearn SQL certificate</a>
         
