--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Maksym Panchenko</h1>
     <h3>QA Engineer</h2>
 
-<img src="../assets/avatar.jpg" height=" 225" width="225">
+<img src="./assets/avatar.jpg" height=" 225" width="225">
 
     <h2>Summary</h2>
 <p>
@@ -111,7 +111,7 @@
     <ul>
         <img src="./assets/SQL.png" height="200" width=""> 
         <br>
-        <a href="/assets/SQL.png" >SoloLearn SQL certificate</a>
+        <a href="./assets/SQL.png" >SoloLearn SQL certificate</a>
         
     </ul>
 
@@ -120,9 +120,9 @@
 <hr>
 <h2>Other</h2>
 <ul>
-    <li><a href="/public/contact.html">My Contacts
+    <li><a href="./public/contact.html">My Contacts
         <br>
-        <img src="/assets/contact_me.jpg">
+        <img src="./assets/contact_me.jpg">
     </a> </li>
 </ul>
 </body>
